[project]
name = "isaac-sim-mcp"
version = "0.1.0"
description = "MCP Server for Isaac Sim (connects to isaac.sim.mcp_extension)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isaac_mcp"]
